// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should add a "next" button when there are more than 3 pages 1`] = `
<div
  className="pagination"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      className="button selected"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      3
    </button>
    <button
      className="button next"
      onClick={[Function]}
    >
      &gt;
    </button>
  </span>
</div>
`;

exports[`Pagination should disable buttons when disabled is true 1`] = `
<div
  className="pagination"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      className="button selected disabled"
      disabled={true}
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="button disabled"
      disabled={true}
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="button disabled"
      disabled={true}
      onClick={[Function]}
    >
      3
    </button>
    <div
      className="dots"
    >
      ...
    </div>
    <button
      className="button disabled"
      disabled={true}
      onClick={[Function]}
    >
      9
    </button>
    <button
      className="button next disabled"
      disabled={true}
      onClick={[Function]}
    >
      &gt;
    </button>
  </span>
</div>
`;

exports[`Pagination should display custom next and previous text 1`] = `
<div
  className="pagination"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <span
        className="prev-icon"
      >
        Prev
      </span>
    </button>
    <button
      className="button selected"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="button next"
      onClick={[Function]}
    >
      <span
        className="next-icon"
      >
        Next
      </span>
    </button>
  </span>
</div>
`;

exports[`Pagination should display less than 5 buttons for minimal page counts 1`] = `
<div
  className="pagination"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      className="button selected"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="button next"
      onClick={[Function]}
    >
      &gt;
    </button>
  </span>
</div>
`;

exports[`Pagination should render page 1 as the first option, followed by an ellipse and further pages, when the current page is greater than 3 1`] = `
<div
  className="pagination"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev"
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      1
    </button>
    <div
      className="dots"
    >
      ...
    </div>
    <button
      className="button selected"
      onClick={[Function]}
    >
      5
    </button>
    <div
      className="dots"
    >
      ...
    </div>
    <button
      className="button"
      onClick={[Function]}
    >
      24
    </button>
    <button
      className="button next"
      onClick={[Function]}
    >
      &gt;
    </button>
  </span>
</div>
`;

exports[`Pagination should render the button for page 1 as selected when the currentPageNumber is 1 1`] = `
<div
  className="pagination float-right margin-top-base"
>
  <span
    className="spaced-group large pagination-group"
  >
    <button
      className="button prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      className="button selected"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      3
    </button>
    <div
      className="dots"
    >
      ...
    </div>
    <button
      className="button"
      onClick={[Function]}
    >
      9
    </button>
    <button
      className="button next"
      onClick={[Function]}
    >
      &gt;
    </button>
  </span>
</div>
`;
